[package]
name = "brainlift"
version = "0.1.0"
authors = ["Alex Sparrow <alex@quartic.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.58.0"
cranelift-module = "0.58.0"
cranelift-simplejit = "0.58.0"
